# Palletrone_sim

./: .gitignore  MUJOCO_LOG.TXT  README.md  plot_tracking.asv  plot_tracking.m
bags/: bag_to_csv.py
bags/bag_all_20260405_211728/: bag_all_20260405_211728_0.db3.zstd  metadata.yaml
bags/bag_all_20260405_213413/: bag_all_20260405_213413_0.db3  metadata.yaml
bags/bag_all_20260405_214441/: metadata.yaml
bags/bag_all_20260405_214819/: metadata.yaml
bags/bag_all_20260405_231314/: metadata.yaml
bags/bag_all_20260405_231741/: metadata.yaml
bags/bag_all_20260405_232529/: metadata.yaml
src/palletrone_cmd/: CMakeLists.txt
src/palletrone_cmd/launch/: arm_launch.py  pt_launch.py
src/palletrone_cmd/src/: attitude_sweep_cmd.cpp  external_wrench_cmd.cpp
src/palletrone_controller/: CMakeLists.txt  package.xml
src/palletrone_controller/src/: allocator_controller.cpp  ekf_state_estimator.cpp  first_wrench_observer.cpp  second_wrench_observer.cpp  wrench_controller.cpp  wrench_observer.cpp
src/palletrone_interfaces/: CMakeLists.txt
src/palletrone_interfaces/msg/: AttitudeCmd.msg  MobObserverInput.msg  PalletroneState.msg
src/plant/: package.xml  setup.py
src/plant/plant/: palm_teleop.py  plant.py
src/plant/xml/: Palletrone.xml  object.xml  palm.xml  scene.xml
